--- a/templates/index.html
+++ b/templates/index.html
@@ -50,5 +50,8 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+        <img src="{{url_for('static', filename='hello.jpg')}}align="middle" />
+        <img src="{{url_for('static', filename='iloveu.png')}}align="middle" />
+        <img src="{{url_for('static', filename='thank you.png')}}align="middle" />
     </body>
 </html>
