--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta content="ugh, hi." name="description">
-        <meta content="Makeup Webcam" name="title">
-        <title>Face Detection</title>
+        <meta content="NES POS" name="description">
+        <title>OpeCv Heroku Deploy</title>
         <style>
          #container {
              margin: 0px auto;
@@ -13,7 +12,6 @@
          #videoElement {
              width: 640px;
              height: 480px;
-             display: none;
              background-color: #666;
          }
 
@@ -26,32 +24,20 @@
          #canvasElement {
              width: 640px;
              height: 480px;
-             border: 1px solid black;
-         }
-         #photo {
-             width: 640px;
-             height: 480px;
-
-             border: 1px solid black;
+             display: none;
          }
         </style>
     </head>
     <body>
         <div id="container">
-            <div>
-            <video autoplay="true" id="videoElement"></video>
-                <canvas id="canvasElement"></canvas>
-
-                <img id="photo">
-            </div>
+            <video autoplay="true" id="videoElement">
+            </video>
+            <img id="imageElement" src="{{ url_for('video_feed') }}">
+            <canvas id="canvasElement"></canvas>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-        <img src="{{url_for('static', filename='hello.jpg')}}align="middle" />
-        <img src="{{url_for('static', filename='iloveu.png')}}align="middle" />
-        <img src="{{url_for('static', filename='thank you.png')}}align="middle" />
     </body>
 </html>
