--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,12 @@
             <img id="imageElement" src="{{ url_for('video_feed') }}" >
             <canvas id="canvasElement"></canvas>
         </div>
+        <div class="row">
+            <div class="column">
+                <img src="namaste.jpg" alt="Mountains" style="width:33%">
+                <img src="please.png" alt="Mountains" style="width:33%">
+                <img src="thank_you.png" alt="Mountains" style="width:33%"></div>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
