--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,9 @@
         </div>
         <div class="row">
             <div class="column">
-                <img src="namaste.jpg" alt="Mountains" style="width:33%">
-                <img src="please.png" alt="Mountains" style="width:33%">
-                <img src="thank_you.png" alt="Mountains" style="width:33%"></div>
+                <img src="static/namaste.jpg" alt="Mountains" style="width:33%">
+                <img src="static/please.png" alt="Mountains" style="width:33%">
+                <img src="static/thank_you.png" alt="Mountains" style="width:33%"></div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
