--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             <div class="column">
                 <img src="static/namaste.jpg" alt="Mountains" style="width:128.312">
                 <img src="static/please.png" alt="Mountains" style="width:182.75">
-                <img src="static/thank_you.png" alt="Mountains" style="width:182.7"></div>
+                <img src="static/thank_you.jpg" alt="Mountains" style="width:182.7"></div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
