--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<html><head>
         <meta charset="utf-8">
         <meta content="NES POS" name="description">
         <title>OpeCv Heroku Deploy</title>
@@ -32,18 +30,18 @@
         <div id="container">
             <video autoplay="true" id="videoElement">
             </video>
-            <img id="imageElement" src="{{ url_for('video_feed') }}" >
+            <img id="imageElement" src="/video_feed">
             <canvas id="canvasElement"></canvas>
         </div>
         <div class="row">
             <div class="column">
-                <img src="static/namaste.jpg" alt="Mountains" style="width:128.312">
-                <img src="static/please.png" alt="Mountains" style="width:182.75">
-                <img src="static/thank_you.jpg" alt="Mountains" style="width:182.7"></div>
+                <img src="static/namaste.jpg" alt="Mountains" style="width:128.312;width: 172px;">
+                <img src="static/please.png" alt="Mountains" style="width:182.75;width: 247px;">
+                <img src="static/thank_you.jpg" alt="Mountains" style="width:182.7;width: 247px;"></div>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
-        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    </body>
-</html>
+        <script src="/static/js/main.js"></script>
+    
+</body></html>
